Fixed Footer on Mobile

--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -1,12 +1,18 @@
 .footer {
+  $text-colour: transparentize($color: $white, $amount: 0.5);
   background-color: $footer-dark-colour;
   padding: 2rem 0;
-  height: 7rem;
+  min-height: 7rem;
 
   &__logo {
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    @include media-breakpoint-down(md) {
+      justify-content: center;
+      margin-bottom: 2rem;
+    }
 
     img {
       height: 3rem;
@@ -18,22 +24,34 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
-    $text-colour: transparentize($color: $white, $amount: 0.5);
     text-align: center;
     color: $text-colour;
-    font-size: 0.75rem;
+    
+    @include media-breakpoint-up(md) {
+      text-align: right;
+    }
+
+    @include media-breakpoint-down(md) {
+      justify-content: center;
+    }
 
     a {
       color: $text-colour;
-    }
-
-    @include media-breakpoint-up(md) {
-      text-align: right;
     }
   }
 
   &__link {
     font-size: 2.5rem;
     margin-left: 1rem;
+  }
+
+  &__copy {
+    color: $text-colour;
+    text-align: center;
+    font-size: 0.75rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
   }
 }
